# mlops-mini-project

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci_main.yaml
app/: __init__.py  app.py  config.py  data_preprocessing.py  load_model.py  main.py
app/templates/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
mlops_mini_project/: __init__.py  config.py  data_ingestion.py  data_preprocessing.py  dataset.py  exp3.py  exp_1_bow_tfidf.py  features.py  plots.py
mlops_mini_project/modeling/: dagshub_token_auth.py  evaluate.py  predict.py  register_model.py  train.py
notebooks/: 01_eda.ipynb  experiement_1_base.ipynb  metrics.json  model_info.json  testing_model_retreiving.ipynb
reports/: .gitignore
