[project]
name = "mlops-mini-project-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.5.3",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "mlflow>=2.20.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "fastapi[standard]",
    "ipykernel>=6.29.5",
    "dvc>=3.59.1",
]
